--- a/dashboards/notificacoes.html
+++ b/dashboards/notificacoes.html
@@ -50,10 +50,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html" class="active">Home<br></a></li>
-          <li><a href="#about">Sobre</a></li>
+          <!-- <li><a href="#about">Sobre</a></li> -->
           <!-- <li><a href="#services">Services</a></li> -->
           <!-- <li><a href="#portfolio">Portfolio</a></li> -->
-          <li><a href="#team">Equipe</a></li>
+          <!-- <li><a href="#team">Equipe</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Dashboards</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Análise Emendas</a></li>
@@ -71,7 +71,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li> -->
-          <li class="dropdown"><a href="#"><span>Dashboards</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>Dashboards</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="dashboards/analiseemendas.html">Análise Emendas</a></li>    
               <li><a href="dashboards/analiseextrapolacaotetomac.html">Análise de Extrapolação de Teto MAC</a></li>
@@ -81,8 +81,8 @@
               <li><a href="dashboards/notificacoes.html">Notificações</a></li>
               <li><a href="dashboards/tabelaomonitoramento.html">Monitoramento do Teto MAC</a></li>
             </ul>
-          </li>
-          <li><a href="#contact">Contato</a></li>
+          </li> -->
+          <!-- <li><a href="#contact">Contato</a></li> -->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
