--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="utf-8">
@@ -91,7 +91,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#about">Login</a>
+      <a class="btn-getstarted" href="login.html">Login</a>
+
 
     </div>
   </header>
@@ -122,21 +123,20 @@
           <div class="col-md-6 col-lg-3" data-aos="zoom-out" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-bar-chart-fill"></i></div>
+              <h4 class="title"><a href="dashboards/pate-controle.html">Programa Agora Tem Especialistas - Carretas</a>
+              </h4>
+              <p class="description">Permite à Equipe do Núcleo de Controle e Avaliação monitorar o componente Carretas do Programa Agora Tem Especialistas - 2025</p>
+            </div>
+          </div><!--End Icon Box -->
+
+          <div class="col-md-6 col-lg-3" data-aos="zoom-out" data-aos-delay="100">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-bar-chart-fill"></i></div>
               <h4 class="title"><a href="dashboards/partolaqueadura.html">Detecção de inconsistências na Produção Hospitalar (Parto e Laqueadura)</a>
               </h4>
               <p class="description">O painel permite o monitoramento e a identificação de falhas no registro hospitalar
                 de partos e
                 laqueaduras. Apresenta também o impacto financeiro dessas registros.</p>
-            </div>
-          </div><!--End Icon Box -->
-
-          <div class="col-md-6 col-lg-3" data-aos="zoom-out" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bi bi-bar-chart-fill"></i></div>
-              <h4 class="title"><a href="dashboards/tabelaomonitoramento.html">Financiamento de Custeio da Atenção Especializada</a></h4>
-              <p class="description">O painel apresenta a evolução do financiamento federal para a atenção especializada
-                no SUS, permitindo comparação anual, por UF, região ou município, relacionando dados financeiros com
-                indicadores sociais como IVS e IDHM</p>
             </div>
           </div><!--End Icon Box -->
 
