--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
           <div class="col-md-6 col-lg-3" data-aos="zoom-out" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-bar-chart-fill"></i></div>
-              <h4 class="title"><a href="dashboards/pate-controle.html">Programa Agora Tem Especialistas - Carretas</a>
+              <h4 class="title"><a href="dashboards/pate-controle.html">Programa Agora Tem Especialistas - Modalidade 3</a>
               </h4>
-              <p class="description">Permite à Equipe do Núcleo de Controle e Avaliação monitorar o componente Carretas do Programa Agora Tem Especialistas - 2025</p>
+              <p class="description">O dashboard permite a visualização das informações acerca da Modalidade 3 do Programa Agora Tem Especialistas - 2025</p>
             </div>
           </div><!--End Icon Box -->
 
