--- a/dashboards/recursos-aes.html
+++ b/dashboards/recursos-aes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>SUS 360º - Agora Tem Especialistas</title>
+  <title>SUS 360º - Análise de Recursos da Atenção Especializada</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -137,7 +137,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Início</a></li>
-          <li><a href="#dashboard" class="active">Agora Tem Especialistas</a></li>
+          <li><a href="#dashboard" class="active">Análise de Recursos AE</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -153,10 +153,10 @@
     <section id="dashboard" class="dashboard-section">
       <div class="container" data-aos="fade-up">
         <div class="dashboard-container">
-          <h2 class="dashboard-title">Programa Agora Tem Especialistas - Controle e Monitoramento</h2>
+          <h2 class="dashboard-title">Análise de Recursos da Atenção Especializada</h2>
           <div class="dashboard-iframe-wrapper">
-            <iframe title="Programa Agora Tem Especialistas - Controle e Monitoramento"
-              src="https://app.powerbi.com/view?r=eyJrIjoiMjkzNzdjZDMtYjNhMy00NDJlLTkwOWQtYTBjMjk2YzQ1NDQzIiwidCI6IjlhNTU0YWQzLWI1MmItNDg2Mi1hMzZmLTg0ZDg5MWU1YzcwNSJ9"
+            <iframe title="Análise de Recursos da Atenção Especializada"
+              src="https://app.powerbi.com/view?r=eyJrIjoiYjUyZmQyNGMtN2NkMC00ODVkLTk4MDQtNjhiMzM4NzUwYjZmIiwidCI6IjlhNTU0YWQzLWI1MmItNDg2Mi1hMzZmLTg0ZDg5MWU1YzcwNSJ9"
               allowFullScreen="true">
             </iframe>
           </div>
