Atualização de title

--- a/dashboards/analiseextrapolacaotetomac.html
+++ b/dashboards/analiseextrapolacaotetomac.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portal NCAV</title>
+  <title>Módulo Controle e Avaliação do SUS 360º</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
