--- a/dashboards/recursos-aes.html
+++ b/dashboards/recursos-aes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>SUS 360º - Análise de Recursos da Atenção Especializada</title>
+  <title>Módulo Controle e Avaliação do SUS 360º - Análise de Recursos da Atenção Especializada</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
