--- a/dashboards/analiseemendas.html
+++ b/dashboards/analiseemendas.html
@@ -131,7 +131,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="../index.html" class="logo d-flex align-items-center me-auto">
-        <h1 class="sitename">SUS 360º</h1>
+        <h1 class="sitename">Módulo Controle e Avaliação do SUS 360º</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
