Retirada de paineis da pagina inicial

--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <img src="https://sus360.saude.gov.br/assets/logo-sus360-v4.svg" alt="Logo SUS360" class="logo-img me-2">
-        <h1 class="sitename mb-0">Módulo Controle e Avaliação do SUS 360º</h1>
+      <a href="https://sus360.saude.gov.br" class="logo d-flex align-items-center me-auto">
+        <img src="https://sus360.saude.gov.br/assets/logo-sus360-v4.svg" alt="Logo SUS360" class="logo-img">
+        <h1 class="sitename mb-0">SUS 360º</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
-        
+
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
@@ -192,55 +192,61 @@
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-out">
           <div class="col-xl-8 col-lg-10 text-center">
-            <h1>Inteligência de Dados para o Controle e Avaliação do SUS</h1>
+            <a href="index.html" class="logo d-flex align-items-center me-auto">
+              <img src="https://sus360.saude.gov.br/assets/logo-sus360-v4.svg" alt="Logo SUS360" class="logo-img">
+              <h1 class="sitename mb-0">Módulo Controle e Avaliação do SUS 360º</h1>
+            </a>
+            <h2>Inteligência de Dados para Controle e Avaliação no SUS</h2>
             <p>Analisando evidências para garantir a conformidade, otimizar recursos e aprimorar a gestão estratégica da
-              saúde.</p>
+              saúde. No momento, este Módulo encontra-se em desenvolvimento. Em breve serão disponibilizados, nesta
+              área, os dashboards
+              públicos.</p>
           </div>
         </div>
 
         <div class="row gy-4 mt-5">
           <div class="col-md-6 col-lg-3" data-aos="zoom-out" data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="display:none;">
               <h4 class="title"><a href="dashboards/pate-controle.html">Painel: Agora Tem Especialistas (Modalidade
                   3)</a></h4>
               <p class="description">Analise a distribuição de recursos e a produção assistencial da Modalidade 3 do
                 programa.</p>
             </div>
-          </div><!--End Icon Box -->
+          </div>
 
           <div class="col-md-6 col-lg-3" data-aos="zoom-out" data-aos-delay="200">
-            <div class="icon-box">
+            <div class="icon-box" style="display:none;">
               <h4 class="title"><a href="dashboards/partolaqueadura.html">Qualidade de Dados: Parto e Laqueadura</a>
               </h4>
               <p class="description">Identifique inconsistências nos registros de procedimentos de parto e laqueadura. O
                 painel quantifica o impacto financeiro de cada falha, apoiando a auditoria e a recuperação de recursos.
               </p>
             </div>
-          </div><!--End Icon Box -->
+          </div>
 
           <div class="col-md-6 col-lg-3" data-aos="zoom-out" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="display:none;">
               <h4 class="title"><a href="dashboards/analiseemendas.html">Monitoramento: Emendas Parlamentares x Teto
                   MAC</a></h4>
               <p class="description">Compare a aplicação dos recursos da Portaria 544 com o limite do Teto MAC.
                 Visualize indicadores de execução financeira e produção para uma gestão de recursos mais eficaz.</p>
             </div>
-          </div><!--End Icon Box -->
+          </div>
 
           <div class="col-md-6 col-lg-3" data-aos="zoom-out" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="display:none;">
               <h4 class="title"><a href="dashboards/recursos-aes.html">Análise e exploração de Recursos da Atenção
                   Especializada</a></h4>
               <p class="description">Painel que apresenta os recursos da Atenção Especializada em Saúde.</p>
             </div>
-          </div><!--End Icon Box -->
+          </div>
 
 
 
         </div>
       </div>
 
-    </section><!-- /Hero Section -->
+    </section>
 
   </main>
 
